Wrapped container around PoliticianList and CongressSideBar, added minimum height/width for no results div to fix resizing issue, and other things that baffle me but lets hope for the best :)

--- a/maverick/src/components/Congress/Congress.css
+++ b/maverick/src/components/Congress/Congress.css
@@ -1,4 +1,10 @@
 .congress {
-    display: flex;
-    margin: 0px auto;
+  display: flex;
+  justify-content: center;
+  /*align-items: flex-start;*/
+}
+
+.centered-container{
+  display: flex;
+  justify-content: center;
 }
