--- a/maverick/src/components/CongressSideBar/CongressSideBar.css
+++ b/maverick/src/components/CongressSideBar/CongressSideBar.css
@@ -1,3 +1,4 @@
 .sidebar{
     padding: 20px;
+    width: 300px; /* Adjust the width as needed */
 }
